[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-test-generator"
version = "2.0.0"
description = "Agentic QA — AI-powered test generation, failure diagnosis, and autonomous triage pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Vazid Mansuri", email = "vazidmansury2861@gmail.com"},
]
keywords = ["testing", "ai", "claude", "test-automation", "sdet", "qa", "agentic", "diagnosis", "triage"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-json-report>=1.5",
]

[project.scripts]
ai-test-gen = "ai_test_generator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
